# tree-sitter-sourcepawn

./: .gitignore  .npmignore  Cargo.toml  LICENSE  README.md  binding.gyp  grammar.js  index.js  package-lock.json  package.json  test.sp  tree-sitter.json
.github/workflows/: dev.yml  main.yml  release.yml
bindings/node/: index.js
bindings/rust/: README.md  build.rs  lib.rs
queries/: context.scm  highlights.scm  locals.scm  tags.scm
src/: binding.cc  grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: aliases.txt  array_indexed_access.txt  callback_implementation.txt  condition_statement.txt  conditional_expression.txt  delete.txt  do_while_loop.txt  enum.txt  enum_struct.txt  expressions.txt  field_access.txt  floats.txt  for_loop.txt  function_call.txt  function_declarations.txt  function_definitions.txt  global_variables.txt  hardcoded_symbol.txt  include_local_lib.txt  include_system_lib.txt  includes.txt  literals.txt  local_variables.txt  local_variables_assignments.txt  methodmap.txt  old_global_variables.txt  old_local_variables.txt  preprocessor_define.txt  preprocessor_if.txt  preprocessor_includes.txt  preprocessor_misc.txt  preprocessor_pragma.txt  scope_access.txt  sizeof.txt  string.txt  string_concatenation.txt  struct.txt  switch_statement.txt  ternary_expression.txt  type_casting.txt  (+5 more)
test/deactivated/: callback_implementation.txt  condition_statement.txt  delete.txt  function_definitions.txt  methodmap.txt  old_local_variables.txt  string_concatenation.txt  struct.txt  switch_statement.txt  ternary_expression.txt  type_casting.txt  (+2 more)
