[package]
name = "tree-sitter-sourcepawn"
description = "sourcepawn grammar for the tree-sitter parsing library"
version = "0.1.0"
keywords = ["incremental", "parsing", "sourcepawn"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/nilshelmig/tree-sitter-sourcepawn"
edition = "2018"
license = "MIT"

include = ["bindings/rust/*", "grammar.js", "src/*", "LICENSE", "README.md"]
build = "bindings/rust/build.rs"

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.8"

[build-dependencies]
cc = "*"
