[package]
name = "tree-sitter-sourcepawn"
description = "sourcepawn grammar for the tree-sitter parsing library"
version = "0.7.3"
keywords = ["incremental", "parsing", "sourcepawn"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/nilshelmig/tree-sitter-sourcepawn"
edition = "2018"
license = "MIT"
readme = "bindings/rust/README.md"

include = ["bindings/rust/*", "grammar.js", "src/*", "LICENSE", "README.md"]
build = "bindings/rust/build.rs"

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.21.0"

[build-dependencies]
cc = "1.0"
